# hubble-satnet-decoder

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  release-notes.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  publish.yml  pyhubblenetwork.yml  release.yml
src/fast_decoder/: __init__.py  constants.py  decoder.py  demod.py  detector.py  spectrogram.py  whitening.py
src/hubble_satnet_decoder/: __init__.py  chipset.py  constants.py  decoder.py  demod.py
tests/: conftest.py  test_constants.py  test_decoder.py  test_whitening.py
